# hello-faststream

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/config/: pgadmin-servers.json
src/hello_faststream/: app_factory.py  consumer_worker.py  log_settings.py  main.py  producer_worker.py  schema.py
