[project]
name = "hello-faststream"
version = "0.1.0"
description = "Simple Producer/Consumer application created to familiarize with faststream."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "faststream[nats,cli]>=0.6.7",
    "msgspec>=0.21.0",
    "structlog>=25.1.0",
]

[project.scripts]
hello-faststream = "hello_faststream.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
